# mbqc_scheduling

./: .gitignore  .taplo.toml  CONTRIBUTING.md  README.md  python_lib  todo.md
.github/workflows/: pypackage.yml  pypublish.yml
docs/: .buildinfo  genindex.html  index.html  objects.inv  searchindex.js
docs/_autosummary/: pauli_tracker.frames.DependencyGraph.html  pauli_tracker.frames.vec.html  pauli_tracker.html  pauli_tracker.live.html  pauli_tracker.live.map.html  pauli_tracker.live.vec.html  pauli_tracker.pauli.TableauEncoding.html  pauli_tracker.pauli.html  pauli_tracker.scheduling.Path.html  pauli_tracker.scheduling.Paths.html  pauli_tracker.scheduling.SpacialGraph.html  pauli_tracker.scheduling.html  pauli_tracker.scheduling.probabilistic.AcceptFunc.html  pauli_tracker.scheduling.probabilistic.Shifts.html  pauli_tracker.scheduling.probabilistic.Weights.html  pauli_tracker.scheduling.probabilistic.html  pauli_tracker.scheduling.run.html
docs/_modules/: index.html
mbqc_scheduling/: Cargo.toml  README.md  todo.md
mbqc_scheduling/src/: cli.rs  interface.rs  lib.rs  main.rs  probabilistic.rs  run.rs  scheduler.rs  search.rs  timer.rs
mbqc_scheduling/src/scheduler/: combinatoric.rs  space.rs  time.rs  tree.rs
mbqc_scheduling/src/search/: threaded.rs
mbqc_scheduling/tests/: roundtrip.rs
mbqc_scheduling/xdocs/: scheduler.md
pauli_tracker/: makefile
pauli_tracker/docs/: py-modindex.html
pauli_tracker/docs/_autosummary/: pauli_tracker.frames.html  pauli_tracker.frames.map.html  (+7 more)
pauli_tracker/python_lib/: Dockerfile  README.md  makefile  requirements.txt
python_lib/: Dockerfile  README.md  main_requirements.txt  makefile  pyproject.toml  requirements.txt
python_lib/docs/: index.rst
python_lib/examples/: compile_flow.py  simple.py
python_lib/python/mbqc_scheduling/: __init__.py  probabilistic.py
python_lib/rust/: Cargo.toml
python_lib/rust/src/: frames.rs  lib.rs  pauli.rs  probabilistic.rs  scheduling.rs
python_lib/rust/src/frames/: map.rs
python_lib/tests/: main.py
results/: Cargo.toml  makefile  plot.py  requirements.txt  todo.norg
results/data/: density-numnodes:20_numdensities:21_density:1.json  density-numnodes:20_numdensities:21_density:10.json  density-numnodes:20_numdensities:21_density:11.json  density-numnodes:20_numdensities:21_density:12.json  density-numnodes:20_numdensities:21_density:13.json  density-numnodes:20_numdensities:21_density:14.json  density-numnodes:20_numdensities:21_density:15.json  density-numnodes:20_numdensities:21_density:16.json  density-numnodes:20_numdensities:21_density:17.json  density-numnodes:20_numdensities:21_density:18.json  density-numnodes:20_numdensities:21_density:19.json  density-numnodes:20_numdensities:21_density:2.json  density-numnodes:20_numdensities:21_density:20.json  density-numnodes:20_numdensities:21_density:21.json  density-numnodes:20_numdensities:21_density:3.json  density-numnodes:20_numdensities:21_density:4.json  density-numnodes:20_numdensities:21_density:5.json  density-numnodes:20_numdensities:21_density:6.json  density-numnodes:20_numdensities:21_density:7.json  density-numnodes:20_numdensities:21_density:8.json  density-numnodes:20_numdensities:21_density:9.json  node-reziprocal_square_root:0.5_reziprocal_square_root:0.5.json
results/example_data/: density-numnodes:10_numdensities:10_density:1.json  density-numnodes:10_numdensities:10_density:10.json  density-numnodes:10_numdensities:10_density:2.json  density-numnodes:10_numdensities:10_density:3.json  density-numnodes:10_numdensities:10_density:4.json  density-numnodes:10_numdensities:10_density:5.json  density-numnodes:10_numdensities:10_density:6.json  density-numnodes:10_numdensities:10_density:7.json  density-numnodes:10_numdensities:10_density:8.json  density-numnodes:10_numdensities:10_density:9.json  density-numnodes:20_numdensities:10_density:1.json  density-numnodes:20_numdensities:10_density:10.json  density-numnodes:20_numdensities:10_density:2.json  density-numnodes:20_numdensities:10_density:3.json  density-numnodes:20_numdensities:10_density:4.json  density-numnodes:20_numdensities:10_density:5.json  density-numnodes:20_numdensities:10_density:6.json  density-numnodes:20_numdensities:10_density:7.json  density-numnodes:20_numdensities:10_density:8.json  density-numnodes:20_numdensities:10_density:9.json  density-numnodes:20_numdensities:20_density:1.json  density-numnodes:20_numdensities:20_density:10.json  density-numnodes:20_numdensities:20_density:11.json  density-numnodes:20_numdensities:20_density:12.json  density-numnodes:20_numdensities:20_density:13.json  density-numnodes:20_numdensities:20_density:14.json  density-numnodes:20_numdensities:20_density:15.json  density-numnodes:20_numdensities:20_density:16.json  density-numnodes:20_numdensities:20_density:17.json  density-numnodes:20_numdensities:20_density:18.json  density-numnodes:20_numdensities:20_density:19.json  density-numnodes:20_numdensities:20_density:2.json  density-numnodes:20_numdensities:20_density:20.json  density-numnodes:20_numdensities:20_density:3.json  density-numnodes:20_numdensities:20_density:4.json  density-numnodes:20_numdensities:20_density:5.json  density-numnodes:20_numdensities:20_density:6.json  density-numnodes:20_numdensities:20_density:7.json  density-numnodes:20_numdensities:20_density:8.json  density-numnodes:20_numdensities:20_density:9.json  (+1 more)
results/plotting/: densities.py  nodes.py  old_densities.py  ownstandard.mplstyle  plot.py  runtimes.py  utils.py
results/plotting/styles/: owndark.mplstyle  ownlatex.mplstyle
results/scripts/: exe_density_hpc.bash  exe_density_local.bash  exe_hpc.bash  exe_local.bash  exe_node_hpc.bash  hardware_info_hpc.bash  loop_hardware_info_hpc.bash
results/src/: cli.rs  lib.rs  main.rs  plots.rs
results/src/plots/: density.rs  node.rs
test_files/: fourier_4o_frames.json  fourier_4o_paths.json  fourier_5o_dependency.json  fourier_5o_paths.json  fourier_5o_spacial.json  fourier_6o_dependency.json  fourier_6o_spacial.json  fourier_oooo_dependency.json  fourier_oooo_spacial.json
(+28 files in other folders)
