[package]
name = "mbqc_scheduling"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.76"
bitvec = "1.0.1"
clap = "4.4.11"
hashbrown = "0.14.3"
itertools = "0.12.0"
# clap = "~4.2.7" # higher requires rustc 1.70
# pauli_tracker = { version = "0.3.2", features = ["serde", "bitvec"] }
pauli_tracker = { version = "0.4.0-alpha.2", features = ["serde", "bitvec"], git = "https://github.com/taeruh/pauli_tracker" }
rand = "0.8.5"
rand_pcg = "0.3.1"
rustc-hash = "1.1.0"
scoped_threadpool = "0.1.9"
serde = "1.0.195"
thiserror = "1.0.51"
utils = { version = "0.1.0", git = "https://github.com/taeruh/pauli_tracker" }

[dev-dependencies]
proptest = "1.2.0"
# rand_pcg = "0.3.1"
