[package]
name = "mbqc_scheduling"
version = "0.1.0"
edition = "2021"

[features]
default = ["no_release_log"]
no_release_log = ["tracing/release_max_level_off"]

[dependencies]
bincode = "1.3.3"
bitvec = "1.0.1"
clap = "4.4.11"
hashbrown = "0.14.3"
itertools = "0.12.0"
# clap = "~4.2.7" # higher requires rustc 1.70
pauli_tracker = { version = "0.4.0", features = ["serde", "bitvec"] }
# pauli_tracker = { version = "0.4.1-alpha.1", features = [
#   "serde",
#   "bitvec",
# ], git = "https://github.com/taeruh/pauli_tracker" }
rand = "0.8.5"
rand_pcg = "0.3.1"
rustc-hash = "1.1.0"
scoped_threadpool = "0.1.9"
serde = "1.0.195"
serde_json = "1.0.113"
thiserror = "1.0.51"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
  "ansi",
  "fmt",
] }

[dev-dependencies]
proptest = "1.2.0"
bit-vec = "0.6.3"
# rand_pcg = "0.3.1"
