[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "mbqc_scheduling"
version = "0.1.0"
authors = [{name="Jannis Ruh", email="ruh.j81@gmail.com"}]

description = "A library to calculate measurement patterns for MBQC based on Pauli tracking"

readme = "README.md"

requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Repository = "https://github.com/taeruh/mbqc_scheduling"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "mbqc_scheduling._lib"
manifest-path = "rust/Cargo.toml"
python-source = "python"

# following options are set in the dockerfile and github actions for maturin build
# --compatibility manylinux_2_28_x86_64
# --profile release
# --sdist
# --out dist
