[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "mbqc_scheduling"
version = "0.1.1-alpha.1"
authors = [{name="Jannis Ruh", email="ruh.j81@gmail.com"}]

description = "Qubit scheduling in Measurement-Based Quantum Computing (MBQC)."

readme = "README.md"

requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Repository = "https://github.com/taeruh/mbqc_scheduling"
Documentation = "https://taeruh.github.io/mbqc_scheduling/"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "mbqc_scheduling._lib"
manifest-path = "rust/Cargo.toml"
python-source = "python"
include = [{ path = "LICENSE*", format = "sdist" }]
