[package]
name = "_lib"
version = "0.1.0"
authors = ["Jannis Ruh <ruh.j81@gmail.com>"]

edition = "2021"
rust-version = "1.65.0" # needed for pauli_tracker (1.56 for pyo3)

license = "MIT OR Apache-2.0"

repository = "https://github.com/taeruh/mbqc_scheduling"

description = "PyO3 wrapper for the mbqc_scheduling crate."
keywords = ["quantum", "mbqc", "scheduling", "pauli"]
categories = ["simulation"]

readme = "../README.md"

exclude = ["makefile", "tests", "xtask"]

[lib]
name = "_lib"
crate-type = ["cdylib"]

[dependencies]
lib = { package = "mbqc_scheduling", version = "0.1.0", git = "https://github.com/taeruh/mbqc_scheduling" }
# lib = { package = "mbqc_scheduling", version = "0.1.0", path = "../../mbqc_scheduling" }
pyo3 = { version = "0.20.2", default-features = false, features = [
  "macros",
  "multiple-pymethods",
] }
pauli_tracker_pyo3 = { version = "0.1.0", git = "https://github.com/taeruh/pauli_tracker" }
# pauli_tracker_pyo3 = { version = "0.1.0", path = "../../../../pauli_tracker/python_lib/rust/" }
rustc-hash = "1.1.0"
bitvec = "1.0.1"
serde_json = "1.0.113"
bincode = "1.3.3"
serde = "1.0.197"

[features]
enable_foo = ["pyo3/abi3-py38"]
